monday morning good for nothing checkpoint